fix spacing between filter and nav

--- a/client/src/components/mobileFilter.css
+++ b/client/src/components/mobileFilter.css
@@ -6,7 +6,7 @@
     display: none;
     border: none;
     position: sticky;
-    top: 70px;
+    top: 9%;
     z-index: 6;
 
 
